--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "laravel/tron",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "description": "Site project Tron",
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
@@ -56,10 +52,8 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
+        "post-update-cmd": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "@php artisan key:generate --ansi"
         ]
     }
